--- a/index.html
+++ b/index.html
@@ -27,41 +27,38 @@
 
 <script>
 const items = [
-  // HEAD
-  { name: "norse helm", place: "head", type1: "medium", type2: "elemental", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "helmet", place: "head", type1: "medium", type2: "physical", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "splintmail helmet", place: "head", type1: "heavy", type2: "elemental", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "bhaskarian battle kabuto", place: "head", type1: "heavy", type2: "elemental", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "plate helm", place: "head", type1: "heavy", type2: "physical", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-
-  // NECK
-  { name: "ring gorget", place: "neck", type1: "medium", type2: "elemental", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "splintmail gorget", place: "neck", type1: "heavy", type2: "elemental", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "plate gorget", place: "neck", type1: "heavy", type2: "physical", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-
-  // ARMS
-  { name: "ringmail arms", place: "arms", type1: "medium", type2: "elemental", ingot: 4, armor_pad: 2, leather_pad: 1, cloth_pad: 1 },
-  { name: "chain arms", place: "arms", type1: "medium", type2: "physical", ingot: 4, armor_pad: 2, leather_pad: 1, cloth_pad: 1 },
-  { name: "splintmail arms", place: "arms", type1: "heavy", type2: "elemental", ingot: 6, armor_pad: 2, leather_pad: 1, cloth_pad: 1 },
-  { name: "plate arms", place: "arms", type1: "heavy", type2: "physical", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-
-  // GLOVES
-  { name: "ringmail gloves", place: "gloves", type1: "medium", type2: "elemental", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "chain gloves", place: "gloves", type1: "medium", type2: "physical", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "splintmail gloves", place: "gloves", type1: "heavy", type2: "elemental", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "plate gloves", place: "gloves", type1: "heavy", type2: "physical", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-
-  // CHEST
-  { name: "ringmail chest", place: "chest", type1: "medium", type2: "elemental", ingot: 8, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "chain chest", place: "chest", type1: "medium", type2: "physical", ingot: 8, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "splintmail chest", place: "chest", type1: "heavy", type2: "elemental", ingot: 10, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "female plate chest", place: "chest", type1: "heavy", type2: "physical", ingot: 10, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-
-  // LEGS
-  { name: "ringmail legs", place: "legs", type1: "medium", type2: "elemental", ingot: 6, armor_pad: 2, leather_pad: 1, cloth_pad: 1 },
-  { name: "chain legs", place: "legs", type1: "medium", type2: "physical", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "splintmail legs", place: "legs", type1: "heavy", type2: "elemental", ingot: 9, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
-  { name: "plate legs", place: "legs", type1: "heavy", type2: "physical", ingot: 9, armor_pad: 0, leather_pad: 1, cloth_pad: 1 },
+  { name: "norse helm", place: "head", type1: "medium", type2: "elemental", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "ringmail chest", place: "chest", type1: "medium", type2: "elemental", ingot: 8, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "ringmail arms", place: "arms", type1: "medium", type2: "elemental", ingot: 4, armor_pad: 2, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "ringmail gloves", place: "gloves", type1: "medium", type2: "elemental", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "ring gorget", place: "neck", type1: "medium", type2: "elemental", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "thick cloak (gorget)", place: "neck", type1: "medium", type2: "elemental", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `1 Travelers cloak` },
+  { name: "ringmail legs", place: "legs", type1: "medium", type2: "elemental", ingot: 6, armor_pad: 2, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "helmet", place: "head", type1: "medium", type2: "physical", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "close helm", place: "head", type1: "medium", type2: "physical", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "chain chest", place: "chest", type1: "medium", type2: "physical", ingot: 8, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "chain arms", place: "arms", type1: "medium", type2: "physical", ingot: 4, armor_pad: 2, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "chain gloves", place: "gloves", type1: "medium", type2: "physical", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "chain coif gorget", place: "neck", type1: "medium", type2: "physical", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "linked cloak (gorget)", place: "neck", type1: "medium", type2: "physical", ingot: 3, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `1 Travelers cloak` },
+  { name: "chain legs", place: "legs", type1: "medium", type2: "physical", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "splintmail helmet", place: "head", type1: "heavy", type2: "elemental", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "bhaskarian battle kabuto", place: "head", type1: "heavy", type2: "elemental", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "splintmail chest", place: "chest", type1: "heavy", type2: "elemental", ingot: 10, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "splintmail arms", place: "arms", type1: "heavy", type2: "elemental", ingot: 6, armor_pad: 2, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "splintmail gloves", place: "gloves", type1: "heavy", type2: "elemental", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "splintmail gorget", place: "neck", type1: "heavy", type2: "elemental", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `1 armor hinge` },
+  { name: "immense cloak (gorget)", place: "neck", type1: "heavy", type2: "elemental", ingot: 4, armor_pad: 0, leather_pad: 0, cloth_pad: 0, additional: `1 splintmail gorget, 7 heavy cloth, 1 light yarn, 2 fur` },
+  { name: "splintmail legs", place: "legs", type1: "heavy", type2: "elemental", ingot: 9, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `1 armor hinge` },
+  { name: "bascinet", place: "head", type1: "heavy", type2: "physical", ingot: 5, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "plate helm", place: "head", type1: "heavy", type2: "physical", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "female plate chest", place: "chest", type1: "heavy", type2: "physical", ingot: 10, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "plate chest", place: "chest", type1: "heavy", type2: "physical", ingot: 10, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "plate arms", place: "arms", type1: "heavy", type2: "physical", ingot: 6, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `1 armor hinge` },
+  { name: "plate gloves", place: "gloves", type1: "heavy", type2: "physical", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `` },
+  { name: "plate gorget", place: "neck", type1: "heavy", type2: "physical", ingot: 4, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `1 armor hinge` },
+  { name: "heavy cloak (gorget)", place: "neck", type1: "heavy", type2: "physical", ingot: 4, armor_pad: 0, leather_pad: 0, cloth_pad: 0, additional: `1 plate gorget, 7 heavy cloth, 1 light yarn, 2 fur` },
+  { name: "plate legs", place: "legs", type1: "heavy", type2: "physical", ingot: 9, armor_pad: 0, leather_pad: 1, cloth_pad: 1, additional: `1 armor hinge` }
 ];
 
 // Populate dropdowns
@@ -83,12 +80,15 @@ function calculate() {
   let ingot = 0, armor = 0, leather = 0, cloth = 0;
   let typeSummary = {};
   let type1Count = { heavy: 0, medium: 0 };
+  let additionalItems = [];
 
   selectedItems.forEach(item => {
     ingot += item.ingot;
     armor += item.armor_pad;
     leather += item.leather_pad;
     cloth += item.cloth_pad;
+
+    if (item.additional) additionalItems.push(item.additional);
 
     const combo = `${item.type1} ${item.type2}`;
     typeSummary[combo] = (typeSummary[combo] || 0) + 1;
@@ -105,6 +105,7 @@ Ingredients needed:
 - Armor Pads: ${armor}
 - Leather Pads: ${leather}
 - Cloth Pads: ${cloth}
+${additionalItems.length ? "- Additional: " + additionalItems.join(", ") : ""}
 
 Armour type mix:
 ${Object.entries(typeSummary).map(([k,v]) => `- ${v} × ${k}`).join("\n")}${bonusText}
